--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -127,7 +127,7 @@
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="{% url 'c_note_master' %}">C Note Master</a></li>
-                        <li><a class="dropdown-item" href="{% url 'print_barcode_stickers' %}" target="_blank">Generate barcode</a></li>
+                        <!-- <li><a class="dropdown-item" href="{% url 'print_barcode_stickers' %}" target="_blank">Generate barcode</a></li> -->
 
                         {% endif %}
                         <li>
