Added select2 dropdown menus

--- a/api/templates/bookings.html
+++ b/api/templates/bookings.html
@@ -96,7 +96,7 @@
                         <label for="to_destination"><b>To Destination</b>
                             <span class="red_color">*</span>
                         </label>
-                        <select class="form-select" name="todest" id="to_destination" aria-label="Default select example" required>                            
+                        <select class="form-control" name="todest" id="to_destination" aria-label="Default select example" required>                            
                         </select>
                     </div>
                 </div>
@@ -311,6 +311,27 @@
         // var new_value = $("#party").find("option:selected").text();
         var new_value = "{{ request.session.p_sender_name }}";
         $("#sender_name").val(new_value);
+
+        // For select2 entries
+
+        $('#to_destination').select2({
+            theme: 'bootstrap-5'
+        });
+
+        $("#party").select2({
+            theme: 'bootstrap-5',
+        });
+
+        $("#ref_courier_name").select2({
+            theme: 'bootstrap-5'
+        });
+        $("#bookingtype").select2({
+            theme: 'bootstrap-5'
+        });
+
+        $(document).on('select2:open', () => {
+            document.querySelector('.select2-search__field').focus();
+        });
     });
 </script>
 
