--- a/api/templates/c_note_ajax.html
+++ b/api/templates/c_note_ajax.html
@@ -58,4 +58,13 @@
         });
         window.location.href = '/c_note_master'
     });
+    $(document).ready(function() {
+        $("#user").select2({
+            theme: 'bootstrap-5'
+        });
+
+        $(document).on('select2:open', () => {
+            document.querySelector('.select2-search__field').focus();
+        });
+    });
 </script>
