--- a/api/templates/tracking_out_ajax.html
+++ b/api/templates/tracking_out_ajax.html
@@ -294,7 +294,15 @@
                     }
                 }
             }
-        })
+        });
+
+        $("#from_destination").select2({
+            theme: 'bootstrap-5'
+        });
+
+        $(document).on('select2:open', () => {
+            document.querySelector('.select2-search__field').focus();
+        });
     });
     // Above code will help to add destinations using jquery.
 </script>
