--- a/api/templates/area_ajax.html
+++ b/api/templates/area_ajax.html
@@ -61,4 +61,14 @@
         })
 
     })
+
+    $(document).ready(function() {
+        $("#pincode").select2({
+            theme: 'bootstrap-5'
+        });
+
+        $(document).on('select2:open', () => {
+            document.querySelector('.select2-search__field').focus();
+        });
+    });
 </script>
