--- a/api/templates/delivery_boy_ajax.html
+++ b/api/templates/delivery_boy_ajax.html
@@ -64,4 +64,14 @@
         })
 
     })
+
+    $(document).ready(function() {
+        $("#area").select2({
+            theme: 'bootstrap-5'
+        });
+
+        $(document).on('select2:open', () => {
+            document.querySelector('.select2-search__field').focus();
+        });
+    });
 </script>
