--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -199,6 +199,22 @@
     </div>
     <!-- <hr class="mt-1">  -->
     {% block alert %}{% endblock alert %}
+
+    <script>
+        $(document).ready(function() {
+            // Set auto focus on every select2 tag field
+            $(document).on('focus', '.select2-selection.select2-selection--single', function(e) {
+                $(this).closest(".select2-container").siblings('select:enabled').select2('open');
+            });
+
+            // steal focus during close - only capture once and stop propogation
+            $('select.select2').on('select2:closing', function(e) {
+                $(e.target).data("select2").$selection.one('focus focusin', function(e) {
+                    e.stopPropagation();
+                });
+            });
+        });
+    </script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
