--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -210,7 +210,7 @@
     });
 
     $("#contct_us").click(function() {
-        window.location.assign("{% url 'ContactUS' %}");
+        window.location.assign("{% url 'Contact-us' %}");
     });
 </script>
 {% endblock content %}
