--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Airpostxpress {% block title %}{% endblock title %}</title>
-    <meta name="description" content="airpostxpress, Your Ultimate Guide to Courier and Cargo Solutions: Explore our comprehensive resources, services, and insights for the courier and cargo industries. Discover efficient shipping, logistics, and tracking solutions to streamline your operations and deliver excellence.">
+    <meta name="description" content="airpostxpress, Best courier company in india, Airpostxpress courier and cargo solutions: Explore our comprehensive resources, services, and insights for the courier and cargo industries. Discover efficient shipping, logistics, and tracking solutions to streamline your operations and deliver excellence.">
 
     <meta name="keywords" content="airpost, xpress, airpostxpress, airpost xpress, best courier, courier, courier service in rajasthan, best courier service in india, best courier service, cargo service, chandrayan3, moon, mission, tracking, Freight Forwarding, Logistics Solutions, Express Delivery,International Shipping, Parcel Tracking, Supply Chain Management, Air Freight, Ocean Freight, Last-Mile Delivery, Warehousing Solutions, Customs Clearance, E-commerce Shipping, Cross-Border Shipping, Shipping Rates, Same-Day Delivery, fedex, ups, trackon, tirupati, air, post, airpostexpress, express, maruti, madhur, nandan, Courier Services, Cargo Shipping">
     <meta name="author" content="Airpostxpress">
@@ -74,7 +74,7 @@
                             <a class="nav-link hover-underline-animation" aria-current="page" href="{% url 'about_us' %}">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link hover-underline-animation" aria-current="page" href="{% url 'ContactUS' %}">Contact Us</a>
+                            <a class="nav-link hover-underline-animation" aria-current="page" href="{% url 'Contact-us' %}">Contact Us</a>
                         </li>
                         {% if user.is_authenticated %}
                         <div class="btn-group">
@@ -170,7 +170,7 @@
                         <a href="{% url 'services' %}" class="link-text-decor mt-5">Service</a><br>
                         <a href="{% url 'network' %}" class="link-text-decor mt-5">Network</a><br>
                         <a href="{% url 'about_us' %}" class="link-text-decor">About Us</a><br>
-                        <a href="{% url 'ContactUS' %}" class="link-text-decor">Contact Us</a><br>
+                        <a href="{% url 'Contact-us' %}" class="link-text-decor">Contact Us</a><br>
                     </div>
                     <div class="col-6">
                         <a href="tracking" class="link-text-decor">Track Shipment</a><br>
@@ -193,8 +193,8 @@
                 <p class="link-text-decor">For more information, Please drop a mail.</p>
             </div>
             <br>
-            <p class="link-text-decor text-center sm_in_sm">&#169; Copyright {{ today_date }} Airpost Xpress Courier Services - All Rights Reserved.</p>
-            <p class="link-text-decor text-center sm_in_sm">Designed and developed by: Nayan</p>
+            <p class="link-text-decor text-center sm_in_sm">&#169; Copyright {{ today_date }} Airpostxpress courier service - all rights reserved.</p>
+            <!-- <p class="link-text-decor text-center sm_in_sm">Designed and developed by: Nayan</p> -->
         </div>
     </div>
     <!-- <hr class="mt-1">  -->
