Correction in drs and booking error message on c note number

--- a/api/templates/booking_ajax.html
+++ b/api/templates/booking_ajax.html
@@ -198,7 +198,8 @@
                         if (res.status) {
                             console.log("pass");
                         } else {
-                            alert(res.message);
+                            $(".error-message").remove();
+                            $("#cnotenumber").after("<div class='error-message' style='color: red'> Insert correct C. Note number</div>");
                         }
                     }
                 });
