--- a/api/templates/drs_ajax.html
+++ b/api/templates/drs_ajax.html
@@ -312,12 +312,12 @@
             }
         })
 
-        $("#area_name").select2({
-            theme: 'bootstrap-5'
-        });
-        $("#delivery_boy").select2({
-            theme: 'bootstrap-5'
-        });
+        // $("#area_name").select2({
+        //     theme: 'bootstrap-5'
+        // });
+        // $("#delivery_boy").select2({
+        //     theme: 'bootstrap-5'
+        // });
         $("#origin").select2({
             theme: 'bootstrap-5'
         });
